2013-09-10  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	Submitted by Matthias Trute:
	bug #36901 flashing Atmega32U4 EEPROM produces garbage on chip
	* avrdude.conf.in (ATmega32U4): Fix EEPROM pagesize to 4, the
	datasheet is wrong here.

2013-09-09  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* configure.ac: check for ar and ranlib in the target tool
	namespace, rather than on the host.

2013-09-08  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	Fix byte-wise EEPROM and flash writes on Xmega
	* jtagmkII_private.h (MTYPE_EEPROM_XMEGA): New memory type.
	* jtagmkII.c (jtagmkII_write_byte): For Xmega EEPROM, use
	memory type MTYPE_EEPROM_XMEGA; for flash writes, always
	write 2 bytes starting on an even address.

2013-09-08  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* term.c: Implement the "verbose" terminal mode command.
	* avrdude.1: Document this.
	* doc/avrdude.texi: (Dito.)

2013-09-07  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* jtag3.c (jtag3_write_byte): Do not attempt to start the paged
	algorithm for EEPROM when being connected through debugWIRE.

2013-09-06  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	Extend the single-byte algorithm to all devices, both flash and
	EEPROM.  (Flash cells must have been erased before though.)
	* jtag3.c (jtag3_initialize): OCDEN no longer needs to be
	considered; a session with "programming" purpose is sufficient
	* jtag3.c (jtag3_write_byte): Use the paged algorithm for all
	flash and EEPROM areas, not just Xmega.

2013-09-05  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	Fix single-byte EEPROM updates on Xmega:
	* jtag3_private.h (MTYPE_EEPROM_XMEGA): New define.
	* jtag3.c (jtag3_write_byte): When updating flash or
	EEPROM on Xmega devices, resort to jtag3_paged_write()
	after filling and modifying the page cache.
	* jtag3.c (jtag3_paged_write): use MTYPE_EEPROM_XMEGA
	where appropriate.
	* jtag3.c (jtag3_initialize): Open with debugging intent
	for Xmega devices, so single-byte EEPROM updates will
	work.
